--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "timelinejs3": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
